--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,24 @@ subprojects {
     }
 
     dependencies {
+        implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+        implementation "org.springframework.boot:spring-boot-starter-web:$springBootStarter"
+        implementation "org.springframework:spring-context:$springVersion"
+        implementation "org.springframework.boot:spring-boot-starter-data-jpa:$springBootStarter"
+        implementation "org.postgresql:postgresql:$postgresqlVersion"
+        implementation 'com.h2database:h2:2.2.220'
+
+
         testImplementation "com.tngtech.archunit:archunit-junit5:$archunitVersion"
         testImplementation 'org.springframework.boot:spring-boot-starter-test'
+        testImplementation "org.springframework:spring-test:$springVersion"
+        testImplementation "org.junit.jupiter:junit-jupiter-api:$jupiterVersion"
+        testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$jupiterVersion"
+        testImplementation "com.tngtech.archunit:archunit-junit5:$archUnitVersion"
+
+        annotationProcessor "org.mapstruct:mapstruct-processor:$mapstructVersion"
+        implementation "org.mapstruct:mapstruct:$mapstructVersion"
+
     }
     test {
         useJUnitPlatform()
